--- a/RMSManagement/src/main/resources/application.properties
+++ b/RMSManagement/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.main.allow-bean-definition-overriding=true
 
 management.endpoints.web.exposure.include=*
 management.security.enabled=false
+
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=2000
+
+server.port=8080
